--- a/.github/workflows/industrial-ci.yml
+++ b/.github/workflows/industrial-ci.yml
@@ -2,9 +2,15 @@ name: Industrial CI
 
 on:
   push:
+    branches:
+      - main
+  pull_request:
+    types: [ opened, synchronize, reopened, ready_for_review ]
   workflow_dispatch:
   schedule:
     - cron: '0 1 * * *' # Runs daily to check for dependency issues or flaking tests
 jobs:
   call_reusable_workflow:
     uses: vortexntnu/vortex-ci/.github/workflows/reusable-industrial-ci.yml@main
+    with:
+        ros_repo: '["testing", "main"]'
