refactor(ci): rename workflow job names

--- a/.github/workflows/industrial-ci.yml
+++ b/.github/workflows/industrial-ci.yml
@@ -10,7 +10,7 @@ on:
   schedule:
     - cron: '0 1 * * *' # Runs daily to check for dependency issues or flaking tests
 jobs:
-  call_reusable_workflow:
+  industrial-ci:
     uses: vortexntnu/vortex-ci/.github/workflows/reusable-industrial-ci.yml@main
     with:
         ros_repo: '["testing", "main"]'
