--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     types: [ opened, synchronize, reopened, ready_for_review ]
 jobs:
-  call_reusable_workflow:
+  code-coverage:
     uses: vortexntnu/vortex-ci/.github/workflows/reusable-code-coverage.yml@main
     secrets:
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }} # Set in the repository secrets
