--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -7,7 +7,7 @@ on:
     types: [ opened, synchronize, reopened, ready_for_review ]
   workflow_dispatch:
 jobs:
-  call_reusable_workflow:
+  pre-commit:
     uses: vortexntnu/vortex-ci/.github/workflows/reusable-pre-commit.yml@main
     with:
         ros_distro: 'humble'
